fixed contact section on mobile view

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
   }
   header{
     grid-column: 2/12 !important;
+    margin-top: 40% !important;
   }
   #aboutme {
     grid-column: 2/12 !important;
@@ -34,6 +35,12 @@
     padding: 0rem !important;
     padding-right: 3rem;
     border-radius: 50%;
+  }
+  #contact{
+    grid-column: 2/12 !important;
+  }
+  .contact-item{
+    padding: 0rem 0rem !important;
   }
 }
 
